--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -100,5 +100,5 @@ jobs:
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
+        name: wubit
         path: openwrt/bin
