--- a/x86_64.config
+++ b/x86_64.config
@@ -89,15 +89,23 @@ CONFIG_PACKAGE_luci-app-frpc=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
+CONFIG_PACKAGE_luci-i18n-ddnsto-zh-cn
+CONFIG_PACKAGE_ddnsto
+CONFIG_PACKAGE_luci-app-ddnsto
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn
+CONFIG_PACKAGE_luci-i18n-webd-zh-cn
+CONFIG_PACKAGE_luci-app-webd
+CONFIG_PACKAGE_webd
+CONFIG_PACKAGE_luci-app-serverchan
