--- a/Newifi_D2.config
+++ b/Newifi_D2.config
@@ -42,10 +42,10 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddnsto-zh-cn
-CONFIG_PACKAGE_ddnsto
-CONFIG_PACKAGE_luci-app-ddnsto
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn
-CONFIG_PACKAGE_luci-i18n-webd-zh-cn
-CONFIG_PACKAGE_luci-app-webd
-CONFIG_PACKAGE_webd
-CONFIG_PACKAGE_luci-app-serverchan
+#CONFIG_PACKAGE_ddnsto
+#CONFIG_PACKAGE_luci-app-ddnsto
+#CONFIG_PACKAGE_luci-i18n-ddns-zh-cn
+#CONFIG_PACKAGE_luci-i18n-webd-zh-cn
+#CONFIG_PACKAGE_luci-app-webd
+#CONFIG_PACKAGE_webd
+#CONFIG_PACKAGE_luci-app-serverchan
